--- a/index.html
+++ b/index.html
@@ -80,6 +80,61 @@
                 </div>
             </div>
         </section>
+        <section>
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resu-col">
+                <h3 class="resu-col-title">My Education</h3>
+                <div class="resu-item">
+                    <h2 class="resu-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-item-inst">Harvard University / 2015 - 2017</h3>
+                    <p class="resu-item-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <hr>
+                <div class="resu-item">
+                    <h2 class="resu-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-item-inst">Harvard University / 2015 - 2017</h3>
+                    <p class="resu-item-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <hr>
+                <div class="resu-item">
+                    <h2 class="resu-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-item-inst">Harvard University / 2015 - 2017</h3>
+                    <p class="resu-item-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+            </div>
+            <div class="resu-col">
+                <h3 class="resu-col-title">My Experience</h3>
+                <div class="resu-item">
+                    <h2 class="resu-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-item-inst">Harvard University / 2015 - 2017</h3>
+                    <p class="resu-item-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <hr>
+                <div class="resu-item">
+                    <h2 class="resu-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-item-inst">Harvard University / 2015 - 2017</h3>
+                    <p class="resu-item-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+                <hr>
+                <div class="resu-item">
+                    <h2 class="resu-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resu-item-inst">Harvard University / 2015 - 2017</h3>
+                    <p class="resu-item-des">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
